--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "activationEvents": [
         "onCommand:awesome-vscode-extension-boilerplate.helloWorld"
     ],
-    "main": "./out/extension.js",
+    "main": "./dist/extension.js",
     "contributes": {
         "commands": [
             {
@@ -23,11 +23,12 @@
     },
     "scripts": {
         "vscode:prepublish": "pnpm run compile",
-        "compile": "tsc -p ./",
+        "clear": "rimraf ./dist",
+        "compile": "pnpm clear && tsc -p ./",
+        "compile:test": "pnpm clear && tsc -p ./test/tsconfig.json",
         "watch": "tsc -watch -p ./",
-        "pretest": "pnpm run compile && pnpm run lint",
         "lint": "eslint src --ext ts",
-        "test": "node ./out/test/runTest.js"
+        "test": "pnpm compile:test && node ./dist/test/runTests.js"
     },
     "devDependencies": {
         "@types/glob": "^8.0.0",
@@ -42,6 +43,8 @@
         "glob": "^8.0.3",
         "mocha": "^10.1.0",
         "prettier": "^2.7.1",
+        "rimraf": "^3.0.2",
+        "tsx": "^3.11.0",
         "typescript": "^4.8.4"
     }
 }
