--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "displayName": "Awesome VSCode Extension Boilerplate",
     "description": "An awesome vscode extension boilerplate",
     "version": "0.0.1",
+    "publisher": "YuTengjing",
     "engines": {
         "vscode": "^1.73.0"
     },
@@ -12,7 +13,7 @@
     "activationEvents": [
         "onCommand:awesome-vscode-extension-boilerplate.helloWorld"
     ],
-    "main": "./dist/extension.js",
+    "main": "./out/extension.js",
     "contributes": {
         "commands": [
             {
@@ -22,13 +23,14 @@
         ]
     },
     "scripts": {
-        "vscode:prepublish": "pnpm run compile",
-        "clear": "rimraf ./dist",
-        "compile": "pnpm clear && tsc -p ./",
+        "vscode:prepublish": "pnpm run esbuild:base --minify",
+        "clear": "rimraf ./out",
+        "esbuild:base": "esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
+        "esbuild:watch": "pnpm run esbuild:base --sourcemap --watch",
         "compile:test": "pnpm clear && tsc -p ./test/tsconfig.json",
         "watch": "tsc -watch -p ./",
         "lint": "eslint src --ext ts",
-        "test": "pnpm compile:test && node ./dist/test/runTests.js"
+        "test": "pnpm compile:test && node ./out/test/runTests.js"
     },
     "devDependencies": {
         "@types/glob": "^8.0.0",
@@ -38,6 +40,7 @@
         "@typescript-eslint/eslint-plugin": "^5.42.1",
         "@typescript-eslint/parser": "^5.42.1",
         "@vscode/test-electron": "^2.2.0",
+        "esbuild": "^0.15.12",
         "eslint": "^8.27.0",
         "format-imports": "^3.1.2",
         "glob": "^8.0.3",
