add keywords field

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
         "url": "https://github.com/tjx666/awesome-vscode-extension-boilerplate/issues",
         "email": "ytj2713151713@gmail.com"
     },
+    "keywords": [
+        "boilerplate",
+        "template"
+    ],
     "categories": [
         "Other"
     ],
