--- a/package.json
+++ b/package.json
@@ -66,23 +66,23 @@
         "publish": "vsce publish --no-dependencies"
     },
     "devDependencies": {
-        "@types/glob": "^8.0.0",
-        "@types/mocha": "^10.0.0",
-        "@types/node": "16.18.3",
-        "@types/vscode": "^1.73.1",
-        "@typescript-eslint/eslint-plugin": "^5.43.0",
-        "@typescript-eslint/parser": "^5.43.0",
-        "@vscode/test-electron": "^2.2.0",
-        "@yutengjing/eslint-config-typescript": "^0.0.4",
+        "@types/glob": "^8.0.1",
+        "@types/mocha": "^10.0.1",
+        "@types/node": "^16.18.11",
+        "@types/vscode": "^1.74.0",
+        "@typescript-eslint/eslint-plugin": "^5.49.0",
+        "@typescript-eslint/parser": "^5.49.0",
+        "@vscode/test-electron": "^2.2.2",
+        "@yutengjing/eslint-config-typescript": "^0.0.9",
         "@yutengjing/prettier-config": "^0.0.1",
-        "esbuild": "^0.15.14",
-        "eslint": "^8.27.0",
-        "format-imports": "^3.1.2",
-        "glob": "^8.0.3",
-        "mocha": "^10.1.0",
-        "prettier": "^2.7.1",
-        "rimraf": "^3.0.2",
-        "typescript": "^4.9.3",
-        "vsce": "^2.14.0"
+        "esbuild": "^0.17.4",
+        "eslint": "^8.32.0",
+        "format-imports": "^3.2.2",
+        "glob": "^8.1.0",
+        "mocha": "^10.2.0",
+        "prettier": "^2.8.3",
+        "rimraf": "^4.1.2",
+        "typescript": "^4.9.4",
+        "vsce": "^2.15.0"
     }
 }
