feat: integrate esbuild-visualizer

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "clear": "rimraf ./out",
         "esbuild:base": "esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
         "esbuild:watch": "pnpm esbuild:base --sourcemap --watch",
+        "esbuild:analyze": "pnpm esbuild:base --minify --metafile=meta.json && esbuild-visualizer --metadata ./meta.json --open",
         "compile:test": "pnpm clear && tsc -p ./test/tsconfig.json",
         "lint": "eslint src --ext ts",
         "test": "pnpm compile:test && node ./out/test/runTests.js",
@@ -75,7 +76,8 @@
         "@vscode/test-electron": "^2.2.2",
         "@yutengjing/eslint-config-typescript": "^0.0.9",
         "@yutengjing/prettier-config": "^0.0.1",
-        "esbuild": "^0.17.4",
+        "esbuild": "^0.17.5",
+        "esbuild-visualizer": "^0.4.0",
         "eslint": "^8.32.0",
         "format-imports": "^3.2.2",
         "glob": "^8.1.0",
