--- a/package.json
+++ b/package.json
@@ -53,6 +53,14 @@
     "eslintConfig": {
         "extends": "@yutengjing/eslint-config-typescript"
     },
+    "prettier": "@yutengjing/prettier-config",
+    "lint-staged": {
+        "*.{js,ts,json}": "eslint --fix",
+        "*.{js,ts,json,md}": "prettier --write"
+    },
+    "simple-git-hooks": {
+        "pre-commit": "npx lint-staged"
+    },
     "scripts": {
         "vscode:prepublish": "pnpm esbuild:base --minify",
         "preinstall": "npx only-allow pnpm",
@@ -78,9 +86,11 @@
         "esbuild-visualizer": "^0.4.0",
         "eslint": "^8.33.0",
         "glob": "^8.1.0",
+        "lint-staged": "^13.1.0",
         "mocha": "^10.2.0",
         "prettier": "^2.8.3",
         "rimraf": "^4.1.2",
+        "simple-git-hooks": "^2.8.1",
         "typescript": "^4.9.4",
         "vsce": "^2.15.0"
     }
