--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
         "lint": "eslint src --ext ts",
         "test": "stale-dep && pnpm compile:test && node ./out/test/runTests.js",
         "package": "vsce package --no-dependencies",
-        "release": "bumpp -c \"release: v%s\" -x \"git commit -A\" package.json && vsce publish --no-dependencies"
+        "release": "bumpp -c \"release: v%s\" package.json && vsce publish --no-dependencies"
     },
     "devDependencies": {
         "@types/glob": "^8.0.1",
