--- a/package.json
+++ b/package.json
@@ -71,11 +71,11 @@
         "vscode:prepublish": "pnpm esbuild:base --minify",
         "preinstall": "npx only-allow pnpm",
         "postinstall": "stale-dep -u",
-        "clear": "rimraf ./out",
+        "clean": "rimraf -rf ./out",
         "esbuild:base": "stale-dep && esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
         "esbuild:watch": "pnpm esbuild:base --sourcemap --watch",
         "esbuild:analyze": "pnpm esbuild:base --minify --metafile=meta.json && esbuild-visualizer --metadata ./meta.json --open",
-        "compile:test": "pnpm clear && tsc -b ./test/tsconfig.json",
+        "compile:test": "pnpm clean && tsc -b ./test/tsconfig.json",
         "lint": "eslint src --ext ts",
         "test": "stale-dep && pnpm compile:test && node ./out/test/runTests.js",
         "package": "vsce package --no-dependencies",
