--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,10 @@
 {
     // See http://go.microsoft.com/fwlink/?LinkId=827846
     // for the documentation about the extensions.json format
-    "recommendations": ["dbaeumer.vscode-eslint", "connor4312.esbuild-problem-matchers"]
+    "recommendations": [
+        "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode",
+        "connor4312.esbuild-problem-matchers",
+        "cschleiden.vscode-github-actions"
+    ]
 }
