--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
         "preinstall": "npx only-allow pnpm",
         "postinstall": "stale-dep -u",
         "clean": "rimraf -rf ./out",
-        "esbuild:base": "stale-dep && esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
+        "esbuild:base": "stale-dep && tsx scripts/esbuild.mts",
         "esbuild:watch": "pnpm esbuild:base --sourcemap --watch",
-        "esbuild:analyze": "pnpm esbuild:base --minify --metafile=meta.json && esbuild-visualizer --metadata ./meta.json --open",
+        "esbuild:analyze": "pnpm esbuild:base --minify --metafile && esbuild-visualizer --metadata ./meta.json --open",
         "compile:test": "pnpm clean && tsc -b ./test/tsconfig.json",
         "lint": "eslint src --ext ts",
         "test": "stale-dep && pnpm compile:test && node ./out/test/runTests.js",
@@ -102,6 +102,7 @@
         "rimraf": "^4.4.0",
         "simple-git-hooks": "^2.8.1",
         "stale-dep": "^0.6.0",
+        "tsx": "^3.12.5",
         "typescript": "^5.0.2"
     }
 }
