feat: esbuild build log & log analyze info

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
         "clean": "rimraf -rf ./out",
         "esbuild:base": "stale-dep && tsx scripts/esbuild.ts",
         "esbuild:watch": "pnpm esbuild:base --sourcemap --watch",
-        "esbuild:analyze": "pnpm esbuild:base --minify --metafile && esbuild-visualizer --metadata ./meta.json --open",
+        "esbuild:analyze": "pnpm esbuild:base --minify --metafile --analyze && esbuild-visualizer --metadata ./meta.json --open",
         "compile:test": "pnpm clean && tsc -b ./test/tsconfig.json",
         "lint": "eslint src --ext ts",
         "test": "stale-dep && pnpm compile:test && node ./out/test/runTests.js",
