--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "@vscode/vsce": "^2.19.0",
         "@yutengjing/eslint-config-typescript": "^0.4.2",
         "@yutengjing/prettier-config": "^0.0.1",
+        "@yutengjing/tsconfig-node": "^0.0.2",
         "bumpp": "^9.1.1",
         "esbuild": "^0.18.11",
         "esbuild-visualizer": "^0.4.1",
