--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,30 +1,8 @@
 {
+    "extends": "@yutengjing/tsconfig-node/tsconfig.json",
     "compilerOptions": {
-        "composite": true,
-        "sourceMap": true,
-
-        /* Basic Options */
         "target": "ES2022",
-        "module": "commonjs",
-
-        /* Strict Type-Checking Options */
-        "strict": true,
-
-        /* Additional Checks */
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-
-        /* Module Resolution Options */
-        "moduleResolution": "node",
-        "esModuleInterop": true,
-        "resolveJsonModule": true,
-
-        /* Experimental Options */
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-
-        /* Advanced Options */
-        "forceConsistentCasingInFileNames": true,
-        "skipLibCheck": true
+        "module": "CommonJS",
+        "moduleResolution": "Bundler"
     }
 }
