docs: add recommend extension YuTengjing.vscode-archive

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
         "connor4312.esbuild-problem-matchers",
-        "github.vscode-github-actions"
+        "github.vscode-github-actions",
+        "YuTengjing.vscode-archive"
     ]
 }
