fix: Option 'bundler' can't be used when module is commonjs

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,7 +2,6 @@
     "extends": "@yutengjing/tsconfig-node/tsconfig.json",
     "compilerOptions": {
         "target": "ES2022",
-        "module": "CommonJS",
-        "moduleResolution": "Bundler"
+        "module": "CommonJS"
     }
 }
