ci: optimize workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,11 @@
 name: Publish Extension
 
 on:
+  workflow_run:
+    workflows: ['Test']
+    branches: [main]
+    types:
+      - completed
   push:
     tags:
       - 'v*'
