--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     },
     "prettier": "@yutengjing/prettier-config",
     "lint-staged": {
-        "*.{ts,json,md}": "eslint --fix",
-        "*.{ts,json,md,yaml}": "prettier --write"
+        "*.{ts,json,md}": [
+            "eslint --fix",
+            "prettier --write"
+        ]
     },
     "simple-git-hooks": {
         "pre-commit": "npx lint-staged"
@@ -75,7 +77,7 @@
         "lint": "eslint src --ext ts",
         "test": "stale-dep && pnpm compile:test && node ./out/test/runTests.js",
         "package": "vsce package --no-dependencies",
-        "release": "bumpp -c \"release: v%s\" package.json",
+        "release": "npx @yutengjing/release",
         "publish:vs-marketplace": "vsce publish --no-dependencies",
         "publish:open-vsx": "ovsx publish --no-dependencies"
     },
@@ -88,6 +90,7 @@
         "@vscode/vsce": "^2.19.0",
         "@yutengjing/eslint-config-typescript": "^0.4.2",
         "@yutengjing/prettier-config": "^0.0.1",
+        "@yutengjing/release": "^0.0.1",
         "@yutengjing/tsconfig-node": "^0.0.2",
         "bumpp": "^9.1.1",
         "changelogen": "^0.5.3",
