fix: run publish only when tests pass

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,16 +1,14 @@
 name: Publish Extension
 
 on:
-  workflow_run:
-    workflows: ['Test']
-    branches: [main]
-    types:
-      - completed
   push:
     tags:
       - 'v*'
 
 jobs:
+  call-workflow:
+    uses: ./.github/workflows/test.yml
+
   publish:
     runs-on: ubuntu-latest
     steps:
