--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,9 +52,29 @@ jobs:
       - run: pnpm test
         if: runner.os != 'Linux'
 
+  set-git-tag:
+    runs-on: ubuntu-latest
+    outputs:
+      GIT_TAG: ${{ steps.set-tag.outputs.GIT_TAG }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set GIT_TAG
+        id: set-tag
+        run: |
+          GIT_TAG=$(git describe --tags --abbrev=0)
+          LATEST_COMMIT=$(git rev-list -n 1 $GIT_TAG)
+          CURRENT_COMMIT=$(git rev-parse HEAD)
+          if [ "$LATEST_COMMIT" = "$CURRENT_COMMIT" ]; then
+            echo "::set-output name=GIT_TAG::${GIT_TAG}"
+          else
+            echo "::set-output name=GIT_TAG::"
+          fi
+
   publish:
-    needs: test
-    if: startsWith(github.ref, 'refs/tags/v')
+    needs: [set-git-tag, test]
+    if: startsWith(needs.set-git-tag.outputs.GIT_TAG, 'v')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -98,8 +118,8 @@ jobs:
         run: pnpm run publish:open-vsx -p ${{ secrets.OPEN_VSX_TOKEN }}
 
   release:
-    needs: publish
-    if: startsWith(github.ref, 'refs/tags/v')
+    needs: [set-git-tag, publish]
+    if: startsWith(needs.set-git-tag.outputs.GIT_TAG, 'v')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
