--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,9 +68,9 @@ jobs:
         run: |
           GIT_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
           if [ -n "$GIT_TAG" ] && [ "$(git rev-list -n 1 $GIT_TAG 2>/dev/null || echo "")" = "$(git rev-parse HEAD)" ]; then
-            echo "::set-output name=GIT_TAG::${GIT_TAG}"
+            echo "GIT_TAG=${GIT_TAG}" >> $GITHUB_OUTPUT
           else
-            echo "::set-output name=GIT_TAG::"
+            echo "GIT_TAG=''" >> $GITHUB_OUTPUT
           fi
 
   publish:
