--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     ],
     "main": "./out/src/extension.js",
     "icon": "assets/logo.png",
+    "packageManager": "pnpm@9.9.0",
     "engines": {
-        "vscode": "^1.86.0"
+        "vscode": "^1.90.0"
     },
     "badges": [
         {
@@ -84,27 +85,27 @@
     },
     "devDependencies": {
         "@types/glob": "^8.1.0",
-        "@types/mocha": "^10.0.6",
-        "@types/node": "^20.11.20",
-        "@types/vscode": "^1.86.0",
-        "@vscode/test-electron": "^2.3.9",
-        "@vscode/vsce": "^2.24.0",
-        "@yutengjing/eslint-config-typescript": "^0.5.2",
-        "@yutengjing/prettier-config": "^1.1.2",
-        "@yutengjing/release": "^0.2.0",
+        "@types/mocha": "^10.0.7",
+        "@types/node": "~20.16.2",
+        "@types/vscode": "1.90.0",
+        "@vscode/test-electron": "^2.4.1",
+        "@vscode/vsce": "^3.0.0",
+        "@yutengjing/eslint-config-typescript": "^1.2.2",
+        "@yutengjing/prettier-config": "^1.3.0",
+        "@yutengjing/release": "^0.3.1",
         "@yutengjing/tsconfig-node": "^0.0.5",
-        "esbuild": "^0.20.1",
+        "esbuild": "~0.23.1",
         "esbuild-visualizer": "^0.6.0",
         "eslint": "^8.57.0",
-        "glob": "^10.3.10",
-        "lint-staged": "^15.2.2",
-        "mocha": "^10.3.0",
-        "ovsx": "^0.8.3",
-        "prettier": "^3.2.5",
-        "rimraf": "^5.0.5",
-        "simple-git-hooks": "^2.9.0",
+        "glob": "^11.0.0",
+        "lint-staged": "^15.2.9",
+        "mocha": "^10.7.3",
+        "ovsx": "^0.9.2",
+        "prettier": "^3.3.3",
+        "rimraf": "^6.0.1",
+        "simple-git-hooks": "^2.11.1",
         "stale-dep": "^0.7.0",
-        "tsx": "^4.7.1",
-        "typescript": "^5.3.3"
+        "tsx": "^4.19.0",
+        "typescript": "~5.5.4"
     }
 }
