--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
         "esbenp.prettier-vscode",
         "connor4312.esbuild-problem-matchers",
         "github.vscode-github-actions",
-        "YuTengjing.vscode-archive"
+        "YuTengjing.vscode-archive",
+        "YuTengjing.package-manager-enhancer"
     ]
 }
