--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,7 +5,7 @@
 
         /* Basic Options */
         "target": "ES2023",
-        "module": "ESNext",
+        "module": "CommonJS",
 
         /* Strict Type-Checking Options */
         "strict": true,
@@ -15,7 +15,7 @@
         "noFallthroughCasesInSwitch": true,
 
         /* Module Resolution Options */
-        "moduleResolution": "Bundler",
+        "moduleResolution": "Node",
         "esModuleInterop": true,
         "resolveJsonModule": true,
 
